# l2ldjango_interview

./: pyproject.toml
l2l/: apps.py  tests.py  views.py
l2l/templatetags/: l2l_extras.py
testsite/: settings.py  urls.py
