[project]
name = "l2l"
version = "0.1.0"
description = "l2l Django interview problem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["django>=5.2.5"]

[dependency-groups]
dev = [
  "django-stubs>=5.2.2",
  "djangorestframework-stubs[compatible-mypy]>=3.16.2",
  "ipython>=9.4.0",
  "ruff>=0.12.9",
]
